[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"
authors = ["Walter Huf <hufman@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
itertools = "0.9.0"
lazy_static = "1.4.0"
bitstring = "0.1.2"
regex = "1.5"